[workspace]
members = ["bin", "lib"]
resolver = "3"

[workspace.package]
authors = ["Matei Pralea <matei@pralea.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha"

[workspace.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

